--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --mainColor: #f57224;
+  --whiteColor: #fff;
+  --blackColor: #000;
+  --lightdark: #222;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: "Lato", sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  padding: 0 100px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   display: flex;
-  flex-direction: column;
+  position: fixed;
+  top: 0;
+}
+
+.left {
+  width: 50%;
+  text-align: left;
+}
+
+.left a {
+  font-weight: 700;
+  color: var(--mainColor);
+  font-size: 21px;
+}
+
+.right {
+  width: 50%;
+  text-align: right;
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav ul a {
+  text-decoration: none;
+}
+
+.shoppingCart i {
+  display: inline-block;
+  font-size: 20px;
+  color: var(--lightdark);
+  margin-right: 15px;
+}
+
+.cartCount {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background: var(--mainColor);
+  color: var(--whiteColor);
+  border-radius: 50%;
+  line-height: 35px;
+  text-align: center;
+  font-size: 12px;
+}
+
+/*Helpers*/
+
+.container {
+  width: 100%;
+  padding: 0 100px;
+}
+
+/*Banner*/
+header {
+  width: 100%;
+  background: url("../src/images/background-brick-wall-bricks-brickwork-259915.jpg");
+  height: 250px;
+  margin-top: 70px;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  color: #fff;
+}
+
+.headerText {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.headerText h1 {
+  font-size: 35px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.headerText p {
+  margin-top: 7px;
 }
